frontend/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@import "tailwindcss";

html,
body {
  background-color: #181717;
  scroll-behavior: smooth;
  font-family: "Inter", sans-serif;
  scroll-behavior: smooth;
  scrollbar-width: none;
  /* Chrome, Edge, Safari */
  -ms-overflow-style: none;
  /* IE & Edge */
}

/* Glassmorphism card effect */
.glassEffect {
  -webkit-backdrop-filter: blur(5px) saturate(100%);
  backdrop-filter: blur(5px) saturate(100%);
  background-color: rgba(237, 240, 245, 0.2);
  border: 1px solid rgba(255, 255, 255, 0.125);
}

.hero-bg-img {
  background-image: url("./assets/cap1.png");
  background-repeat: no-repeat;
  object-fit: cover;
  /* background-position: center; */
}

/* --------------- Welcome Section Styles -------------- */

.text-darkBrown {
  color: #2A2725;
  position: relative;
  display: inline-block;
  overflow: hidden;
  line-height: 1.05;
  width: 100%;
}

.clip-text-welcome {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  color: #f4efe7;
  clip-path: inset(0 0 100% 0);
  white-space: nowrap;
  transition: none;
  width: 100%;
}

@media (max-width: 768px) {
  .responsive-mobile {
    position: absolute;
    top: 33%;
  }
}

